{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 27,
  "lineage": "a2848467-abc4-86e2-4e12-67ab11cd6dae",
  "resources": [
    {
      "module": "module.security_hub_collector_runner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037370603820:security-group/sg-0a58d51465e50d1c9",
            "description": "security-hub-dev container security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a58d51465e50d1c9",
            "ingress": [],
            "name": "ecs-security-hub-dev",
            "name_prefix": "",
            "owner_id": "037370603820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Automation": "Terraform",
              "Environment": "dev",
              "Name": "ecs-security-hub-dev"
            },
            "tags_all": {
              "Automation": "Terraform",
              "Environment": "dev",
              "Name": "ecs-security-hub-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f4de56f6970729d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_hub_collector_runner",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_ecs_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-984916418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a58d51465e50d1c9",
            "security_group_rule_id": "sgr-07f4ed53b0d8d0d9b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_hub_collector_runner.aws_security_group.ecs_sg"
          ]
        }
      ]
    }
  ]
}